--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -1,4 +1,4 @@
-<img src="/midterm/blog-header.jpg" alt="Blog Header">
+<img src="/comm260/midterm/blog-header.jpg" alt="Blog Header">
 
 <h2>
   The Most Romantic City in India - Udaipur, India
